cmake_minimum_required(VERSION 2.8)
PROJECT(Link)

list(APPEND CMAKE_CXX_FLAGS -pthread)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")

set(PROJ_SOURCES
    main.cpp
    Link.cpp
    )

ADD_EXECUTABLE(${PROJECT_NAME} ${PROJ_SOURCES})